--- a/package.json
+++ b/package.json
@@ -1,23 +1,29 @@
 {
-  "name": "my-project",
+  "name": "vue-better-slider-button",
   "version": "1.0.0",
-  "description": "A Vue.js project",
+  "description": "A Vue.js component implemented a sliding button.",
   "author": "SyMind <dacongsama@live.com>",
-  "private": true,
+  "keywords": [
+    "vue",
+    "vuejs",
+    "vue-component"
+  ],
+  "main": "dist/index.js",
+  "files": [
+    "lib"
+  ],
   "scripts": {
-    "dev": "webpack-dev-server --inline --progress --config build/webpack.dev.conf.js",
+    "server": "webpack-dev-server --inline --progress --config build/webpack.server.conf.js",
     "start": "npm run dev",
     "unit": "jest --config test/unit/jest.conf.js --coverage",
     "e2e": "node test/e2e/runner.js",
     "test": "npm run unit && npm run e2e",
     "lint": "eslint --ext .js,.vue src test/unit test/e2e/specs",
-    "build": "node build/build.js"
-  },
-  "dependencies": {
-    "vue": "^2.5.2",
-    "vue-router": "^3.0.1"
+    "build:dev": "node build/dev.js",
+    "build:lib": "node build/lib.js"
   },
   "devDependencies": {
+    "vue": "^2.5.2",
     "autoprefixer": "^7.1.2",
     "babel-core": "^6.22.1",
     "babel-eslint": "^8.2.1",
@@ -76,14 +82,5 @@
     "webpack-bundle-analyzer": "^2.9.0",
     "webpack-dev-server": "^2.9.1",
     "webpack-merge": "^4.1.0"
-  },
-  "engines": {
-    "node": ">= 6.0.0",
-    "npm": ">= 3.0.0"
-  },
-  "browserslist": [
-    "> 1%",
-    "last 2 versions",
-    "not ie <= 8"
-  ]
+  }
 }
