--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "vue-sliding-button",
-  "version": "1.0.0",
+  "version": "1.0.2",
   "description": "A Vue.js component implemented a sliding button.",
   "author": "SyMind <dacongsama@live.com>",
   "keywords": [
@@ -9,9 +9,6 @@
     "vue-component"
   ],
   "main": "dist/vue-sliding-button.js",
-  "files": [
-    "lib"
-  ],
   "scripts": {
     "server": "webpack-dev-server --inline --progress --config build/webpack.server.conf.js",
     "start": "npm run dev",
@@ -23,6 +20,7 @@
     "build:lib": "node build/lib.js"
   },
   "devDependencies": {
+    "vue": "^2.5.16",
     "autoprefixer": "^7.1.2",
     "babel-core": "^6.22.1",
     "babel-eslint": "^8.2.1",
@@ -77,8 +75,5 @@
     "webpack-bundle-analyzer": "^2.9.0",
     "webpack-dev-server": "^2.9.1",
     "webpack-merge": "^4.1.0"
-  },
-  "dependencies": {
-    "vue": "^2.5.16"
   }
 }
